# diffusion-autoencoders

./: LICENSE  README.md  pyproject.toml
demo/: autoencode.ipynb  interpolation.ipynb  manipulation.ipynb
diffae/: __init__.py  classifier.py  dataset.py  interface.py  sampler.py  trainer.py
diffae/cfg/: 064_model.yml  128_model.yml  256_model.yml  64_model.yml
diffae/models/: encoder.py  loss.py  model.py  network_blocks.py  unet.py
diffae/utils/: __init__.py  diffusion.py  general.py
scripts/: clf_test.py  clf_train.py  test.py  train.py
